fix spacing

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,30 @@
 .container {
-	display: flex;
-	flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .container__innerWithInput {
-	display: flex;
-	flex-direction: row;
-	justify-content: center; /* Добавлено для центрирования по горизонтали */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 5rem;
+}
+
+.container__issues {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    padding-top: 1rem;
+    gap: 1rem;
+    background-color: #4a4a4a;
+    border-radius: 1rem;
+}
+
+.container__withIssues{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
 }
